Issue #3373964: Focus state not visible for "Home" icon in toolbar

--- a/styles/layout/toolbar.scss
+++ b/styles/layout/toolbar.scss
@@ -140,6 +140,7 @@
         box-shadow: inset 0 0 0 1px var(--gin-color-focus-border),
                     inset 0 0 0 4px var(--gin-color-focus);
         background: var(--gin-color-primary-light);
+        z-index: 3;
         &::before {
           background: var(--gin-color-primary-active);
         }
